<resources>
    <string name="extra_put_android_key" translatable="false">extra android key</string>
    <string name="extra_put_name_key" translatable="false">extra name key</string>
    <string name="extra_put_id_key" translatable="false">extra id key</string>
    <string name="sorry_no_camera_found">Sorry. No camera found.</string>
    <string name="name_goes_here">Name goes here</string>
    <string name="camera_failed">Camera failed!</string>
    <string name="edit_failed">Edit canceled!</string>
    <string name="action_settings">Settings</string>
    <string name="is_android">Android?</string>
    <string name="app_name">I, Android</string>
    <string name="input_id">Input id</string>
    <string name="no_name">No name</string>
    <string name="cancel">Cancel</string>
    <string name="no_id">No id</string>
    <string name="name">Name</string>
    <string name="yes">Yes</string>
    <string name="id">Id</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
</resources>
