<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.norgaard.iandroid.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageViewProfilePicture"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/labelName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture"
        app:layout_constraintVertical_bias="0.1"/>

    <TextView
        android:id="@+id/valueName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/no_name"
        app:layout_constraintLeft_toLeftOf="@+id/labelName"
        app:layout_constraintTop_toBottomOf="@+id/labelName"/>

    <TextView
        android:id="@+id/labelId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/id"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/valueName"
        app:layout_constraintTop_toBottomOf="@+id/valueName"/>

    <TextView
        android:id="@+id/valueId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/no_id"
        app:layout_constraintLeft_toLeftOf="@+id/labelId"
        app:layout_constraintTop_toBottomOf="@+id/labelId"/>

    <CheckBox
        android:id="@+id/checkBoxIdAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/is_android"
        app:layout_constraintLeft_toLeftOf="@+id/valueId"
        app:layout_constraintTop_toBottomOf="@+id/valueId"/>

</android.support.constraint.ConstraintLayout>
